--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,118 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*
+=============== 
+Variables
+===============
+*/
+
+:root {
+  --light-aqua: rgb(114, 248, 248);
+  --med-aqua: rgb(60, 141, 141);
+  --dark-aqua: rgb(10, 61, 61);
+  --max-width: 1170px;
+  --fixed-width: 450px;
+  --line-height: 1.5;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*
+=============== 
+Global Styles
+===============
+*/
+
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--light-aqua);
+  color: var(--dark-aqua);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: var(--line-height);
+  font-size: 0.9 rem;
+}
+
+main {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+h4 {
+  font-size: 0.75rem;
+}
+
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+}
+
+button {
+  background-color: var(--light-aqua);
+  width: 100%;
+  border-color: transparent;
+  box-shadow: 0 0 0 2pt var(--med-aqua);
+  border-radius: 0.25rem;
+  font-size: 1.2rem;
+  padding: 0.5rem 0;
+  margin: 2rem auto 0 auto;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+}
+
+/*
+Global Classes
+===============
+*/
+
+.container {
+  background-color: white;
+  width: 90vw;
+  max-width: 450px;
+  margin: 3rem 0;
+  padding: 1.5rem 2rem;
+  border-radius: 0.25rem;
+  box-shadow: var(--dark-shadow);
+}
+
+.dog {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 3rem;
+  margin-bottom: 1.5rem;
+  align-items: center;
+}
+
+.dog img {
+  width: 75px;
+  height: 75px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: var(--light-shadow);
 }
